# gemma27b_service

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: api.py
src/v1/: service.py
src/v1/utils/: model_loader.py
test/: download_gemma27b.py  model_infer.py
